--- a/pagethree.html
+++ b/pagethree.html
@@ -3,16 +3,15 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="indexstyle.css">
+    <link rel="stylesheet" type="text/css" href="threestyle.css">
     <meta charset="utf-8" />
-    <title>Goodnight Moon</title>
+    <title>Goodnight Moon Phone</title>
   </head>
   <body>
     <main>
-      <a href="pagetwo.html">
-        <h1>Goodnight Moon</h1>
-      </a>
+      <h1>There was a telephone.</h1>
     </main>
+    <script src="sketchthree.js"></script>
     <a href="index.html">
       <div class="lamp">
         <img src="lamp.png" alt="drawing of a lamp">
