--- a/pagetwo.html
+++ b/pagetwo.html
@@ -3,20 +3,21 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="indexstyle.css">
+    <link rel="stylesheet" type="text/css" href="twostyle.css">
     <meta charset="utf-8" />
-    <title>Goodnight Moon</title>
+    <title>Goodnight Moon Green Room</title>
   </head>
   <body>
     <main>
-      <a href="pagetwo.html">
-        <h1>Goodnight Moon</h1>
+      <a href="pagethree.html">
+        <h1>In a great green room</h1>
       </a>
     </main>
+    <script src="sketchtwo.js"></script>
     <a href="index.html">
-      <div class="lamp">
-        <img src="lamp.png" alt="drawing of a lamp">
-      </div>
-    </a>
+        <div class="lamp">
+          <img src="lamp.png" alt="drawing of a lamp">
+        </div>
+      </a>
   </body>
 </html>
