--- a/pagefive.html
+++ b/pagefive.html
@@ -3,17 +3,20 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="threestyle.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+        </style>
+    <link rel="stylesheet" type="text/css" href="fivestyle.css">
     <meta charset="utf-8" />
-    <title>Goodnight Moon Phone</title>
+    <title>Goodnight Moon Bears</title>
   </head>
   <body>
     <main>
-      <a href="pagefour.html">
-        <h1>There was a telephone.</h1>
-      </a>
+        <a href="pagesix.html">
+            <h1>Bears</h1>
+        </a>
     </main>
-    <script src="sketchthree.js"></script>
+    <script src="sketchfive.js"></script>
     <a href="index.html">
       <div class="lamp">
         <img src="lamp.png" alt="drawing of a lamp">
