--- a/pagefour.html
+++ b/pagefour.html
@@ -3,17 +3,16 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="threestyle.css">
+    <link rel="stylesheet" type="text/css" href="fourstyle.css">
     <meta charset="utf-8" />
-    <title>Goodnight Moon Phone</title>
+    <title>Goodnight Moon Cow</title>
   </head>
   <body>
     <main>
-      <a href="pagefour.html">
-        <h1>There was a telephone.</h1>
-      </a>
+        <a href="pagefive.html">
+            <h1>And a picture of the cow jumping over the moon.</h1>
+        </a>
     </main>
-    <script src="sketchthree.js"></script>
     <a href="index.html">
       <div class="lamp">
         <img src="lamp.png" alt="drawing of a lamp">
