--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
         <h1>Goodnight Moon</h1>
       </a>
     </main>
-    <a href="index.html">
-      <div class="lamp">
-        <img src="lamp.png" alt="drawing of a lamp">
-      </div>
-    </a>
+      <p>by Margaret Wise Brown</p>
   </body>
 </html>
