--- a/pageeight.html
+++ b/pageeight.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <main>
-        <a href="pagenine.html">
-            <h1>And a little toyhouse.</h1>
-        </a>
     </main>
-    <script src="sketchsix.js"></script>
+    <a href="pagenine.html" class="picture">
+      <img src="house.png" alt="a little doll house" class="center">
+    </a>
+    <script src="sketcheight.js"></script>
     <a href="index.html">
       <div class="lamp">
         <img src="lamp.png" alt="drawing of a lamp">
