--- a/pagesix.html
+++ b/pagesix.html
@@ -13,7 +13,7 @@
   <body>
     <main>
         <a href="pageseven.html">
-            <h1>And two little kittens.</h1>
+            <h1>And two little kittens</h1>
         </a>
     </main>
     <script src="sketchsix.js"></script>
