--- a/pagetwo.html
+++ b/pagetwo.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <a href="pagethree.html">
-        <h1>In a great green room</h1>
+        <h1>In a great green room...</h1>
       </a>
     </main>
     <script src="sketchtwo.js"></script>
