--- a/pagefive.html
+++ b/pagefive.html
@@ -3,19 +3,16 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.1/addons/p5.sound.min.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
-        </style>
     <link rel="stylesheet" type="text/css" href="fivestyle.css">
     <meta charset="utf-8" />
     <title>Goodnight Moon Bears</title>
   </head>
   <body>
     <main>
-        <a href="pagesix.html">
-            <h1>Bears</h1>
-        </a>
     </main>
+    <a href="pagesix.html" class="picture">
+        <img src="bearsPic.png" alt="picture frame with three bears sitting in chairs" class="center">
+      </a>
     <script src="sketchfive.js"></script>
     <a href="index.html">
       <div class="lamp">
