--- a/pageeleven.html
+++ b/pageeleven.html
@@ -12,6 +12,7 @@
         <a href="pagetwelve.html">
             <h1>Goodnight moon.</h1>
         </a>
+      <p>Move your mouse.</p>
     </main>
     <script src="sketcheleven.js"></script>
     <a href="index.html">
