--- a/pagenine.html
+++ b/pagenine.html
@@ -12,6 +12,7 @@
         <a href="pageten.html">
             <h1>And a young mouse.</h1>
         </a>
+      <p>Click and drag your mouse.</p>
     </main>
     <script src="sketchnine.js"></script>
     <a href="index.html">
