--- a/pagesix.html
+++ b/pagesix.html
@@ -15,6 +15,7 @@
         <a href="pageseven.html">
             <h1>And two little kittens</h1>
         </a>
+        <p>Press any key.</p>
     </main>
     <script src="sketchsix.js"></script>
     <a href="index.html">
