--- a/pagethirteen.html
+++ b/pagethirteen.html
@@ -13,6 +13,7 @@
           <h1>Goodnight noises everywhere.
           </h1>
         </a>
+      <p>Move your mouse.</p>
     </main>
     <script src="sketchthirteen.js"></script>
     <a href="index.html">
