--- a/pagetwo.html
+++ b/pagetwo.html
@@ -12,6 +12,7 @@
       <a href="pagethree.html">
         <h1>In a great green room...</h1>
       </a>
+      <p>Click to change the shade of green.</p>
     </main>
     <script src="sketchtwo.js"></script>
     <a href="index.html">
