--- a/pagethree.html
+++ b/pagethree.html
@@ -12,7 +12,7 @@
       <a href="pagefour.html">
         <h1>There was a telephone.</h1>
       </a>
-      
+      <p>Move your mouse.</p>
     </main>
     <script src="sketchthree.js"></script>
     <a href="index.html">
