--- a/pagefour.html
+++ b/pagefour.html
@@ -12,7 +12,9 @@
         <a href="pagefive.html">
             <h1>And a picture of the cow jumping over the moon.</h1>
         </a>
+        <p>Move your mouse.</p>
     </main>
+    <script src="sketchfour.js"></script>
     <a href="index.html">
       <div class="lamp">
         <img src="lamp.png" alt="drawing of a lamp">
