--- a/pageseven.html
+++ b/pageseven.html
@@ -13,7 +13,7 @@
             <h1>And a pair of mittens.</h1>
         </a>
     </main>
-    <script src="sketchsix.js"></script>
+    <script src="sketchseven.js"></script>
     <a href="index.html">
       <div class="lamp">
         <img src="lamp.png" alt="drawing of a lamp">
