--- a/pagetwelve.html
+++ b/pagetwelve.html
@@ -12,6 +12,7 @@
         <a href="pagethirteen.html">
             <h1>Goodnight stars.</h1>
         </a>
+        <p>Click your mouse.</p>
     </main>
     <script src="sketchtwelve.js"></script>
     <a href="index.html">
