--- a/pagefourteen.html
+++ b/pagefourteen.html
@@ -13,6 +13,10 @@
             <h1>Goodnight moon</h1>
         </a>
     </main>
-
+    <a href="about.html">
+      <div class="cat">
+        <img src="yellowCat.png" alt="drawing of a little yellow kitten">
+      </div>
+    </a>
   </body>
 </html>
