--- a/pageseven.html
+++ b/pageseven.html
@@ -12,6 +12,7 @@
         <a href="pageeight.html">
             <h1>And a pair of mittens.</h1>
         </a>
+        <p>Press '2'.</p>
     </main>
     <script src="sketchseven.js"></script>
     <a href="index.html">
