--- a/pagefourteen.html
+++ b/pagefourteen.html
@@ -15,7 +15,7 @@
     </main>
     <a href="about.html">
       <div class="cat">
-        <img src="yellowCat.png" alt="drawing of a little yellow kitten">
+        <img src="yellowkitten.png" alt="drawing of a little yellow kitten">
       </div>
     </a>
   </body>
