--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <main>
-      <h1>About</h1>
+      <a href="index.html">
+        <h1>About</h1>
+      </a>
       <p>This website is inspired by Margaret Wise Brown's "Goodnight Moon". It was my favorite book to read with my parents as a young child, so this site is for them. Goodnight and with love, Meredith</p>
     </main>
     <a href="index.html">
