--- a/pageeight.html
+++ b/pageeight.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <p>Click the sentence to match the picture.</p>
+      <p>Click the sentence to change the type of building.</p>
     </main>
     <a href="pagenine.html" class="picture">
       <img src="house.png" alt="a little doll house" class="center">
