--- a/pagefive.html
+++ b/pagefive.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <p>Click the # to change the number of bears.</p>
+      <p>Click the sentence to change the number of bears.</p>
     </main>
     <a href="pagesix.html" class="picture">
         <img src="bearsPic.png" alt="picture frame with three bears sitting in chairs" class="center">
